change the backgroundcolor of active buttons and links, fix the search input image overflowing :construction_worker: :hammer:

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,8 @@
 * {
    font-family: 'Poppins';
 }
+
+button:active,
+a:active {
+   background-color: rgb(6, 182, 212);
+}
